--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -82,4 +82,9 @@
 
     <bool name="config_eap_sim_based_auth_supported">true</bool>
 
+    <!-- Doze mode -->
+    <string name="config_dozeComponent">com.android.systemui/com.android.systemui.doze.DozeService</string>
+    <bool name="config_dozeAfterScreenOff">true</bool>
+    <integer name="config_screenBrightnessDoze">10</integer>
+    
 </resources>
